Functional subcircuits
